Fixes alignment issue of the voter. It will now hold it's position even when the poll item is expanded.

--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -12,6 +12,8 @@
     }
 
     .controls {
+        margin-bottom: auto;
+        margin-top: 32px;
         padding-left: 10px;
         min-width: 50px;
     }
@@ -185,4 +187,3 @@
         border-top-right-radius: 4px;
     }
 }
-
