--- a/src/app/series-poll-item/series-poll-item.component.scss
+++ b/src/app/series-poll-item/series-poll-item.component.scss
@@ -11,6 +11,8 @@
     }
 
     .controls {
+        margin-bottom: auto;
+        margin-top: 32px;
         padding-left: 10px;
         min-width: 50px;
     }
